css/styles.css
/* ... */
@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/* HIDDEN TEXT FOR ACCESSIBILITY */

.visually-hidden:not(:focus):not(:active) {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

/* MEDIA QUERIES */

/* TABLET */

@media only screen and (min-width: 767px) {
  .content-hot,
  .content-coming-soon,
  .content-marketplace,
  .quick-links-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  .header-image-buttons .btn {
    width: 150px;
    height: 50px;
  }

  .all-games-content,
  .search-content {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 2rem;
  }

  .reviews-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 2rem;
    width: 80%;
  }

  .user-profile-image {
    width: 300px;
    height: 300px;
  }

  .user-info {
    margin: 1rem 5rem;
    display: grid;
    grid-template-areas:
      "user-grid1 user-grid1 user-grid2"
      "user-grid3 user-grid3 user-grid3";
  }

  .user-grid1 {
    grid-area: user-grid1;
  }

  .user-grid2 {
    grid-area: user-grid2;
  }

  .user-grid3 {
    grid-area: user-grid3;
  }

  .user-bio {
    font-size: 1rem;
  }

  .user-bio-text {
    height: 20vh;
  }

  .user-badges span {
    font-size: 2.25rem;
  }

  .item-price {
    margin-left: 5rem;
  }

  .cart-page {
    padding: 0 1rem 2rem 1rem;
  }
}

/* SMALL DESKTOP */

@media only screen and (min-width: 1080px) {
  .content-hot,
  .content-coming-soon,
  .content-marketplace,
  .quick-links-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }
}

/* DESKTOP */

@media only screen and (min-width: 1380px) {
  .content-hot,
  .content-coming-soon,
  .content-marketplace,
  .quick-links-container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    gap: 3rem;
  }

  .quick-links-container {
    flex-direction: row;
    gap: 3rem;
  }

  footer {
    flex-direction: row;
    align-items: normal;
    gap: 2rem;
    text-align: left;
  }

  .footer-first,
  .footer-second,
  .footer-third {
    margin-left: 1rem;
  }

  .footer-fourth {
    display: block;
    width: 45%;
  }

  .footer-icons {
    justify-content: normal;
  }

  .searchbar-pos {
    display: flex;
    align-items: center;
  }

  .searchbar-pos > input {
    width: 20vw;
  }

  h1 {
    font-size: 4rem;
  }

  .header-image-buttons {
    margin-bottom: 5rem;
  }

  .header-image {
    height: 600px;
  }

  .mobile-searchbar {
    display: none;
  }

  .header-icons {
    gap: 3rem;
  }

  .game-info {
    padding: 0 1rem;
    grid-template-areas:
      "game-grid1 game-grid1 game-grid2"
      "game-grid1 game-grid1 game-grid3"
      "game-grid4 game-grid4 game-grid4"
      "game-grid4 game-grid4 game-grid4";
  }

  .header-image-thinner {
    height: 200px;
  }

  .game-summary {
    width: 800px;
    margin-left: 3rem;
  }

  .game-summary p {
    font-size: 1rem;
    margin: 0;
  }

  .reviews-container img {
    width: 50%;
  }

  .form-page form,
  .contact-form,
  .customer-service-content,
  .create-account-form,
  .sell-form {
    width: 30vw;
  }

  .login-page {
    margin-bottom: 20vh;
  }

  .suggested-games,
  .user-favorite-games-content,
  .user-purchased-games-content {
    flex-direction: row;
    justify-content: center;
  }

  .all-games-content,
  .search-content {
    grid-template-columns: repeat(4, 1fr);
  }

  .cart-page,
  .checkout-page {
    width: 60vw;
  }

  .checkout-page {
    height: 90vh;
  }

  .item-total-counter {
    width: 10vw;
  }

  .item-total-price {
    margin-top: 3rem;
  }

  .checkout-card {
    width: 30vw;
  }

  .checkout-form-group > input {
    width: 15vw;
  }

  .game-image-small {
    width: 95%;
  }

  .navbar {
    top: 100px;
  }

  .nav-menu {
    grid-template-rows: 1fr 1fr 1fr;
    grid-auto-flow: column;
    grid-auto-columns: 1fr;
  }

  header {
    height: 100px;
  }

  .form-input {
    width: 80%;
  }

  .sloagan-text {
    font-size: 1.5em;
  }
}

